manifests/resources/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petclinic
spec:
  selector:
    matchLabels:
      run: petclinic
  replicas: 1
  template:
    metadata:
      labels:
        run: petclinic
    spec:
      containers:
        - name: petclinic
          image: quay.io/tetchell/petclinic:latest
          ports:
            - containerPort: 8080
          imagePullPolicy: Always
          tty: true
          resources:
              limits:
                memory: '512Mi'
                cpu: '1'
          readinessProbe:
              httpGet:
                path: /
                port: 8080
