manifests/resources/service.yml
apiVersion: v1
kind: Service
metadata:
  name: petclinic-svc
  labels:
    run: petclinic
spec:
  ports:
    - port: 8080
      protocol: TCP
  selector:
    run: petclinic
